--- a/sysutils/plasma5-discover/Makefile
+++ b/sysutils/plasma5-discover/Makefile
@@ -12,7 +12,7 @@ COMMENT=	Plasma5 package management tools
 #LIB_DEPENDS=	libpackagekit-qt.so:ports-mgmt/packagekit-qt5
 
 USES=		cmake:outsource compiler:c++11-lib cpe desktop-file-utils \
-		gettext kde:5 tar:xz
+		gettext kde:5 pkgconfig tar:xz
 USE_KDE=	archive attica auth codecs completion config configwidgets \
 		coreaddons crash dbusaddons ecm i18n iconthemes itemmodels \
 		itemviews jobwidgets kdeclarative kio newstuff notifications \
